--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "url": "git+https://github.com/vyshudoulagar/tinyapp.git"
   },
   "keywords": [],
-  "author":  "vyshudoulagar <du.vyshu@gmail.com>",
+  "author": "vyshudoulagar <du.vyshu@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/vyshudoulagar/tinyapp/issues"
   },
   "homepage": "https://github.com/vyshudoulagar/tinyapp#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "express": "^4.18.2"
   },
